<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".completeOrder">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_background"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header"
            android:textSize="25dp"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showTableNum"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginStart="100dp"
            app:layout_constraintStart_toEndOf="@+id/header"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <TextView
            android:id="@+id/updateTableNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:layout_marginStart="120dp"
            app:layout_constraintStart_toEndOf="@+id/header"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/headerBar"
        android:layout_marginTop="150dp"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/alert_background"
            android:padding="80dp"
            android:layout_marginStart="37dp"
            android:layout_marginEnd="37dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="訂單已送出\n正在為您準備餐點..."
            android:textSize="30dp"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <Button
            android:id="@+id/nextOrderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:layout_weight="1"
            android:text="@string/nextOrder"
            android:textSize="15dp"
            />

        <Button
            android:id="@+id/finishOrderButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="25dp"
            android:layout_weight="1"
            android:text="@string/finishOrder"
            android:textSize="15dp"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>