<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderMenu">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_background"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header"
            android:textSize="25dp"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showTableNum"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginStart="100dp"
            app:layout_constraintStart_toEndOf="@+id/header"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <TextView
            android:id="@+id/updateTableNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:layout_marginStart="120dp"
            app:layout_constraintStart_toEndOf="@+id/header"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/subBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="請選擇餐點"
        android:textSize="30dp"
        android:textAlignment="center"
        android:padding="25dp"
        app:layout_constraintTop_toBottomOf="@+id/headerBar"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/subBar"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/headerBar"
            >

            <TextView
                android:id="@+id/cataRice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item_background"
                android:text="@string/cata_rice"
                android:textSize="20dp"
                android:layout_marginTop="1dp"
                android:paddingTop="40dp"
                android:paddingBottom="40dp"
                android:paddingLeft="35dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/headerBar"
            >

            <TextView
                android:id="@+id/cataNoodle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item_background"
                android:text="麵食類"
                android:textSize="20dp"
                android:layout_marginTop="1dp"
                android:paddingTop="40dp"
                android:paddingBottom="40dp"
                android:paddingLeft="35dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/headerBar"
            >

            <TextView
                android:id="@+id/cataDesert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item_background"
                android:text="小菜類"
                android:textSize="20dp"
                android:layout_marginTop="1dp"
                android:paddingTop="40dp"
                android:paddingBottom="40dp"
                android:paddingLeft="35dp"/>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:layout_weight="1"
            android:text="@string/cancelOrder"
            android:textSize="15dp"
            />

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="25dp"
            android:layout_weight="1"
            android:text="@string/confirmOrder"
            android:textSize="15dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
